# DZforSEMETSTR

./: .gitignore  CMakeLists.txt  README.md  auth.c  auth.h  book_list.c  main.c  student.c  student_list.c  student_list.h  task.txt  utils.h
auth/: auth.c  auth.h
book/: book.c  book.h  book_list.h
db/: books.csv  students.csv  users.csv
menu/: menu.c  menu.h
student/: student.c  student.h
utils/: utils.c  utils.h
